[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Laser.gd" type="Script" id=1]
[ext_resource path="res://Imatges/Atlas/laserBlue01.tres" type="Texture" id=2]
[ext_resource path="res://Sons/tocat.wav" type="AudioStream" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 48.0

[node name="Laser" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -6.98
[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
